maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:14: error: not found: value murDroite
       if (murDroite) {avance}
           ^WallFollowerMaze:18: error: not found: value murDroite
          if (murDroite){
              ^WallFollowerMaze:26: error: value gauche is not a member of Unit
possible cause: maybe a semicolon is missing before `value gauche'?
    }gauche;}
     ^