maze.wallfollower.WallFollowerMaze.scala.code
override def run() {

}

  
def longermur () {
    while (!estSurBiscuit) {
		 KHOSW		
    }
  }

  def KHOSW() {
		while (!estFaceMur){
 			if (murDroite) {avance}
        else {
          droite;
          avance;
        	if (murDroite){
            avance
          }
          else {
            droite;
          	avance;
          }
        }
    }gauche;}
 